--- a/src/common/stylus/base.styl
+++ b/src/common/stylus/base.styl
@@ -20,9 +20,17 @@ body,html{
     -webkit-transform: scaleY(0.7);
     transform: scaleY(0.7);
   }
+  .border-1px::before{
+    -webkit-transform: scaleY(0.7);
+    transform: scaleY(0.7);
+  }
 }
 @media (-webkit-min-device-pixel-ratio: 2),(min-device-pixel-ratio: 2){
   .border-1px::after{
+    -webkit-transform: scaleY(0.5);
+    transform: scaleY(0.5);
+  }
+  .border-1px::before{
     -webkit-transform: scaleY(0.5);
     transform: scaleY(0.5);
   }
